# projet_cpp

./: CMakeLists.txt  ConvergenceAnalyzer.cpp  ConvergenceAnalyzer.hh  GaussSeidelSolver.cpp  GaussSeidelSolver.hh  IterativeSolver.hh  JacobiSolver.cpp  JacobiSolver.hh  LSS.cpp  LSS.hh  MatrixGenerator.cpp  MatrixGenerator.hh  README.md  SORSolver.cpp  SORSolver.hh  SolveResult.hh  main.cpp  main1.cpp  main2.cpp  script_Emna_Giovanni.py
